--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,11 @@ body,
 .root {
   height: 100%;
 }
+
 body {
   line-height: 1.5;
 }
+
 body,
 .app {
   background: white;
@@ -14,14 +16,32 @@ body,
 /* main page */
 
 .list-books-title {
-  padding: 10px 0;
   background: #2e7c31;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  width: 70%;
+  border-bottom-right-radius: 69px;
+  border-bottom-left-radius: 70px;
+  margin: 0 auto;
+  padding: 11px;
 }
+
+.list-books-title img {
+  width: 45px;
+  margin: 0 15px;
+}
+
 .list-books-title h1 {
-  font-weight: 400;
+  font-weight: 800;
   margin: 0;
   color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  letter-spacing: 0.3rem;
+}
+
+.list-books-title h1 a span {
+  color: #a6ffa9
 }
 
 .list-books-content {
@@ -31,17 +51,25 @@ body,
 
 .bookshelf {
   padding: 0 10px 20px;
+  margin: 30px;
+  text-align: center;
 }
 
 @media (min-width: 600px) {
   .bookshelf {
     padding: 0 20px 40px;
+
   }
 }
 
+
 .bookshelf-title {
-  border-bottom: 1px solid #dedede;
+  display: inline-block;
+  border-bottom: 4px solid #2e7c31;
+  border-radius: 11px;
+  padding: 0 15px;
 }
+
 .bookshelf-books {
   text-align: center;
 }
@@ -51,6 +79,7 @@ body,
   right: 25px;
   bottom: 25px;
 }
+
 .open-search a {
   display: block;
   width: 50px;
@@ -76,10 +105,12 @@ body,
   display: flex;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 0 6px rgba(0, 0, 0, 0.23);
 }
+
 .search-books-input-wrapper {
   flex: 1;
   background: #e9e;
 }
+
 .search-books-bar input {
   width: 100%;
   padding: 15px 10px;
@@ -117,31 +148,74 @@ body,
   justify-content: center;
   flex-wrap: wrap;
 }
+
 .books-grid li {
-  padding: 10px 15px;
+  padding: 10px 20px;
   text-align: left;
+  width: 190px;
+  margin: 15px 18px;
+  background-color: #f7ffe4;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px #ededed;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
+
+.books-grid li:hover {
+  margin: 7px 18px 22px 18px
+}
+
 
 .book {
   width: 140px;
+  margin: 0 auto;
 }
-.book-title,
-.book-authors {
-  font-size: 0.8em;
+.book-img-details {
+  padding: 3% 10%;
 }
-.book-title {
-  margin-top: 10px;
+.book-img-details .book{
+  width: 170px
 }
-.book-authors {
-  color: #999;
+.book-details-container {
+  padding: 1% 10%;
 }
-
+.book-details {
+  font-size: 14px;
+  /* font-family: serif; */
+  margin: 18px 0;
+  color: #626262;
+  line-height: 15px;
+}
 .book-top {
   position: relative;
   height: 200px;
   display: flex;
   align-items: flex-end;
 }
+.book-top-details {
+  height: 227px;
+}
+
+.book-details h3 {
+  margin: 12px 0;
+}
+
+.book-title,
+.book-authors {
+  font-size: 0.8em;
+}
+
+.book-title {
+  margin-top: 10px;
+}
+
+.book-authors {
+  color: #999;
+}
+
+
 
 .book-shelf-changer {
   position: absolute;
@@ -157,6 +231,7 @@ body,
   background-size: 20px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
+
 .book-shelf-changer select {
   width: 100%;
   height: 100%;
@@ -170,36 +245,124 @@ body,
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   background: #eee;
 }
+
 .book-cover-title {
   padding: 20px 10px 0;
   text-align: center;
   font-size: 0.8em;
 }
 
+.empty-shelf {
+  font-size: 17px;
+  color: #a39b9b;
+  font-style: italic;
+  font-weight: 700;
+}
 
 .center {
   text-align: center;
   margin: 0 auto;
 }
+
 .m3 {
-  
+
   margin-top: 3%;
 }
+
 .authors {
-    font-size: 20px;
-    
-    margin-bottom: 15px;
-    margin-bottom: 30px;
-}
-.authors span{
   font-size: 20px;
-    font-weight: 700;
-    padding: 18px;
+
+  margin-bottom: 15px;
+  margin-bottom: 30px;
+}
+
+.authors span {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 18px;
 
 }
-.description {
-  margin: 0 20%;
-}
+
+
 .description {
   font-size: 20px;
+}
+
+.error {
+  text-align: center;
+  font-weight: 400;
+  font-size: 25px;
+  margin: 50px;
+}
+
+.check-book {
+  position: absolute;
+  top: 0;
+  left: 8px
+}
+
+.backcolor-icon {
+  width: 28px;
+  height: 20px;
+  background-color: #fff;
+}
+
+.backcolor-icon img {
+  width: 30px;
+}
+
+/*Error page*/
+.flex {
+  display: flex;
+
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.mt-3 {
+  margin-top: 3%;
+}
+
+.flex-center {
+  justify-content: center;
+}
+.align-item-center {
+  align-items: center;
+
+}
+
+.img-container img {
+  width: 280px;
+}
+
+.error-404 {
+  font-size: 6rem;
+  text-align: center;
+  font-weight: 600;
+}
+
+.error-0 {
+  color: #2e7c31;
+}
+
+.error-text {
+  font-size: 33px;
+  padding: 0 20px;
+  text-align: center;
+  font-weight: 700;
+}
+
+.home-btn {
+  background-color: #2e7c31;
+  padding: 13px 25px;
+  border-radius: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.normal-link {
+  text-decoration: none;
+  color: #fff;
 }
