--- a/src/App.css
+++ b/src/App.css
@@ -393,11 +393,11 @@ body,
     border-bottom-left-radius: 30px;
   }
   .list-books-title h1 {
-    font-size: 1.5rem;
+    font-size: 1.1rem;;
     letter-spacing: 0.1rem;
   }
   .list-books-title img {
-    width: 35px;
+    width: 25px;
     margin: 0 10px
   }
   .flex-wrap-media {
